// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AssetLinks > should render for no links 1`] = `
"<div id="test-wrapper">
  <!--v-if-->
</div>"
`;

exports[`AssetLinks > should render links for medium buttons 1`] = `
"<div id="test-wrapper">
  <div>
    <div class="heading-inter-14-bold pb-2">Links</div>
    <div class="grid grid-cols-1 gap-2 sm:flex sm:flex-wrap">
      <div class="inline-flex">
        <lukso-button variant="secondary" size="small" is-link="" href="https://link1.example.com" custom-class="paragraph-inter-14-medium">
          <div class="flex w-full items-center text-left">Link 1 <lukso-icon name="link-1" size="small" class="ml-2"></lukso-icon>
          </div>
        </lukso-button>
      </div>
      <div class="inline-flex">
        <lukso-button variant="secondary" size="small" is-link="" href="https://link2.example.com" custom-class="paragraph-inter-14-medium">
          <div class="flex w-full items-center text-left">Link 2 <lukso-icon name="link-1" size="small" class="ml-2"></lukso-icon>
          </div>
        </lukso-button>
      </div>
    </div>
  </div>
</div>"
`;

exports[`AssetLinks > should render links for small buttons 1`] = `
"<div id="test-wrapper">
  <div>
    <div class="heading-inter-14-bold pb-2">Links</div>
    <div class="grid grid-cols-1 gap-2 sm:flex sm:flex-wrap">
      <div class="inline-flex">
        <lukso-button variant="secondary" size="small" is-link="" href="https://link1.example.com" custom-class="paragraph-inter-14-medium">
          <div class="flex w-full items-center text-left">Link 1 <lukso-icon name="link-1" size="small" class="ml-2"></lukso-icon>
          </div>
        </lukso-button>
      </div>
      <div class="inline-flex">
        <lukso-button variant="secondary" size="small" is-link="" href="https://link2.example.com" custom-class="paragraph-inter-14-medium">
          <div class="flex w-full items-center text-left">Link 2 <lukso-icon name="link-1" size="small" class="ml-2"></lukso-icon>
          </div>
        </lukso-button>
      </div>
    </div>
  </div>
</div>"
`;

exports[`AssetLinks > should render loading state for medium buttons 1`] = `
"<div id="test-wrapper">
  <div>
    <div class="mb-3 h-[17px] w-1/2 animate-pulse rounded-4 bg-neutral-90"></div>
    <div class="flex gap-4">
      <div class="animate-pulse rounded-4 bg-neutral-90 h-[48px] w-[170px]"></div>
      <div class="animate-pulse rounded-4 bg-neutral-90 h-[48px] w-[170px]"></div>
    </div>
  </div>
</div>"
`;

exports[`AssetLinks > should render loading state for small buttons 1`] = `
"<div id="test-wrapper">
  <div>
    <div class="mb-3 h-[17px] w-1/2 animate-pulse rounded-4 bg-neutral-90"></div>
    <div class="flex gap-4">
      <div class="animate-pulse rounded-4 bg-neutral-90 h-[24px] w-[90px]"></div>
      <div class="animate-pulse rounded-4 bg-neutral-90 h-[24px] w-[90px]"></div>
    </div>
  </div>
</div>"
`;

exports[`AssetLinks > should render without title 1`] = `
"<div id="test-wrapper">
  <div>
    <!--v-if-->
    <div class="grid grid-cols-1 gap-2 sm:flex sm:flex-wrap">
      <div class="inline-flex">
        <lukso-button variant="secondary" size="medium" is-link="" href="https://link1.example.com" custom-class="paragraph-inter-14-medium">
          <div class="flex w-full items-center text-left">Link 1 <lukso-icon name="link-1" size="small" class="ml-2"></lukso-icon>
          </div>
        </lukso-button>
      </div>
    </div>
  </div>
</div>"
`;
